--- a/login.html
+++ b/login.html
@@ -5,13 +5,7 @@
 <form action="login.php" method="POST">
 	<p>
 		<label for="username">Username:</label>
-		<input
-		type="text"
-		name="user"
-		id="userinput"
-		minlength='1'
-		maxlength='10'
-		required />
+		<input type="text" name="user" id="userinput" minlength='1' maxlength='10' required />
     <input type="submit" value="Login" />
 	</p>
 </form>
