bug fix new user

--- a/new_user.html
+++ b/new_user.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head><title>Creating a New User</title></head>
+<head><title>Creating New User</title></head>
 <body>
 <form action="new_user.php" method="POST">
 	<p>
