new_user bug fix

--- a/interface.html
+++ b/interface.html
@@ -5,5 +5,8 @@
 </head>
 <body>
 	<p>Hello World!</p>
+  <form action="login.html" method="POST">
+    <input type="submit" value="Take me back" />
+  </form>
 </body>
 </html>
