new user changes

--- a/login.html
+++ b/login.html
@@ -14,5 +14,9 @@
     <input type="submit" value="Login" />
 	</p>
 </form>
+<p>Would you like to create a new user?</p>
+<form action="new_user.html" method="POST">
+	<p><input type="submit" value="Yes" /></p>
+</form>
 </body>
 </html>
