--- a/new_user_prompt.html
+++ b/new_user_prompt.html
@@ -3,13 +3,11 @@
 <head><title>New User</title></head>
 <body>
   <p>User does not exist. Would you like to create a new user?</p>
-  <p>
-    <form action="new_user.html" method="POST">
-      <input type="submit" value="Yes" />
-    </form>
-    <form action="login.html" method="POST">
-      <input type="submit" value="Take me back" />
-    </form>
-  </p>
+  <form action="new_user.html" method="POST">
+    <p><input type="submit" value="Yes" /></p>
+  </form>
+  <form action="login.html" method="POST">
+    <p><input type="submit" value="Take me back" /></p>
+  </form>
 </body>
 </html>
