--- a/new_user.html
+++ b/new_user.html
@@ -14,6 +14,7 @@
     />
     <input type="submit" value="Let's go!" />
 	</p>
+</form>
 <form action="login.html" method="POST">
   <p><input type="submit" value="Take me back" /></p>
 </form>
