--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
 </form>
 <p>Would you like to create a new user?</p>
 <form action="new_user.html" method="POST">
-	<p><input type="submit" value="Yes" /></p>
+	<input type="submit" value="Yes" />
 </form>
 </body>
 </html>
