--- a/login.html
+++ b/login.html
@@ -14,9 +14,11 @@
     <input type="submit" value="Login" />
 	</p>
 </form>
-<p>Would you like to create a new user?</p>
-<form action="new_user.html" method="POST">
-	<input type="submit" value="Yes" />
-</form>
+<p>
+	Would you like to create a new user?
+	<form action="new_user.html" method="POST">
+		<input type="submit" value="Yes" />
+	</form>
+</p>
 </body>
 </html>
