--- a/new_user.html
+++ b/new_user.html
@@ -4,7 +4,7 @@
 <body>
 <form action="new_user.php" method="POST">
 	<p>
-		<label for="username">Enter a username:</label>
+		<label for="username">Enter your desired username:</label>
     <input
     type="text"
     name="user"
